# chickenpy

./: README.md  env.yml  main.py  pyproject.toml
assets/: .gitignore
assets/sprites/ase/: carrot.ase  celery.ase  mirepoix.ase  onion.ase
chickenpy/: cells.py  drawable.py  globals.py  grid.py  item.py
src/: chef.py  game.py  globals.py  inventory.py  item.py  player.py  recipe.py
src/chickenpy/: inventory.py  main.py  recipe.py
tests/: test_cells.py  test_inventory.py
