[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "chickenpy"
version = "0.0.1"
authors = [
    { name = "Fred Jaya" }
]
description = "10X cooking simulator"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/fredjaya/chickenpy"
Issues = "https://github.com/fredjaya/chickenpy/issues"
