[project]
name = "chickenpy"
version = "0.1.0"
description = "10X cooking simulator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame-ce>=2.5.2",
]

[tool.ruff]
# Same as black
line-length = 88
indent-width = 4

[tool.ruff.format]
# Same as black
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "ruff>=0.8.0",
]
